# allocator

./: .travis.yml  CMakeLists.txt  README.md
lib/: CMakeLists.txt  allocator.hpp  container.hpp  lib.hpp
pkg/: CMakeLists.txt
src/: CMakeLists.txt  allocator.cpp
tst/: CMakeLists.txt  test_allocator.cpp  test_container.cpp
